# hydra_useful_callbacks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
environment/: conda.yaml  requirements.txt  requirements_dev.txt
scripts/: example.py
scripts/config/: main.yaml
scripts/config/hydra/callbacks/: git.yaml  mlflow.yaml
src/hydra_useful_callbacks/: __init__.py  git.py  mlflow.py  timer.py  utils.py
tests/: __init__.py  test_hydra_callbacks.py  test_mlflow_callback.py
